test/spec/simd_boolean.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/simd_boolean.wast
(;; STDOUT ;;;
out/test/spec/simd_boolean.wast:995: assert_invalid passed:
  out/test/spec/simd_boolean/simd_boolean.2.wasm:000001c: error: type mismatch in v128.any_true, expected [v128] but got [i32]
  000001c: error: OnUnaryExpr callback failed
out/test/spec/simd_boolean.wast:996: assert_invalid passed:
  out/test/spec/simd_boolean/simd_boolean.3.wasm:000001c: error: type mismatch in i8x16.all_true, expected [v128] but got [i32]
  000001c: error: OnUnaryExpr callback failed
out/test/spec/simd_boolean.wast:997: assert_invalid passed:
  out/test/spec/simd_boolean/simd_boolean.4.wasm:000001c: error: type mismatch in v128.any_true, expected [v128] but got [i32]
  000001c: error: OnUnaryExpr callback failed
out/test/spec/simd_boolean.wast:998: assert_invalid passed:
  out/test/spec/simd_boolean/simd_boolean.5.wasm:000001d: error: type mismatch in i16x8.all_true, expected [v128] but got [i32]
  000001d: error: OnUnaryExpr callback failed
out/test/spec/simd_boolean.wast:999: assert_invalid passed:
  out/test/spec/simd_boolean/simd_boolean.6.wasm:000001c: error: type mismatch in v128.any_true, expected [v128] but got [i32]
  000001c: error: OnUnaryExpr callback failed
out/test/spec/simd_boolean.wast:1000: assert_invalid passed:
  out/test/spec/simd_boolean/simd_boolean.7.wasm:000001d: error: type mismatch in i32x4.all_true, expected [v128] but got [i32]
  000001d: error: OnUnaryExpr callback failed
out/test/spec/simd_boolean.wast:1004: assert_malformed passed:
  out/test/spec/simd_boolean/simd_boolean.8.wat:1:32: error: unexpected token "f32x4.any_true", expected an instr.
  (memory 1) (func (result i32) (f32x4.any_true (v128.const i32x4 0 0 0 0)))
                                 ^^^^^^^^^^^^^^
out/test/spec/simd_boolean.wast:1005: assert_malformed passed:
  out/test/spec/simd_boolean/simd_boolean.9.wat:1:32: error: unexpected token "f32x4.all_true", expected an instr.
  (memory 1) (func (result i32) (f32x4.all_true (v128.const i32x4 0 0 0 0)))
                                 ^^^^^^^^^^^^^^
out/test/spec/simd_boolean.wast:1006: assert_malformed passed:
  out/test/spec/simd_boolean/simd_boolean.10.wat:1:32: error: unexpected token "f64x2.any_true", expected an instr.
  (memory 1) (func (result i32) (f64x2.any_true (v128.const i32x4 0 0 0 0)))
                                 ^^^^^^^^^^^^^^
out/test/spec/simd_boolean.wast:1007: assert_malformed passed:
  out/test/spec/simd_boolean/simd_boolean.11.wat:1:32: error: unexpected token "f64x2.all_true", expected an instr.
  (memory 1) (func (result i32) (f64x2.all_true (v128.const i32x4 0 0 0 0)))
                                 ^^^^^^^^^^^^^^
out/test/spec/simd_boolean.wast:1012: assert_invalid passed:
  out/test/spec/simd_boolean/simd_boolean.12.wasm:000001a: error: type mismatch in v128.any_true, expected [v128] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_boolean.wast:1020: assert_invalid passed:
  out/test/spec/simd_boolean/simd_boolean.13.wasm:000001a: error: type mismatch in i8x16.all_true, expected [v128] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_boolean.wast:1028: assert_invalid passed:
  out/test/spec/simd_boolean/simd_boolean.14.wasm:000001a: error: type mismatch in v128.any_true, expected [v128] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_boolean.wast:1036: assert_invalid passed:
  out/test/spec/simd_boolean/simd_boolean.15.wasm:000001b: error: type mismatch in i16x8.all_true, expected [v128] but got []
  000001b: error: OnUnaryExpr callback failed
out/test/spec/simd_boolean.wast:1044: assert_invalid passed:
  out/test/spec/simd_boolean/simd_boolean.16.wasm:000001a: error: type mismatch in v128.any_true, expected [v128] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_boolean.wast:1052: assert_invalid passed:
  out/test/spec/simd_boolean/simd_boolean.17.wasm:000001b: error: type mismatch in i32x4.all_true, expected [v128] but got []
  000001b: error: OnUnaryExpr callback failed
277/277 tests passed.
;;; STDOUT ;;)
